# python-cli-template

./: README.md  pyproject.toml
.github/: rename_project.sh
src/: __main__.py  base.py  cli.py
tests/: test_cli.py
